--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div>Finest guitars in the world</div>
       <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
         <div>
-          <input id="email" type="email" name="email" placeholder="Enter your email address">
+          <input id="email" type="email" name="email" placeholder="Enter your email address" required>
         </div>
         <div>
           <input id="submit" type="submit" value="Get Started">
@@ -35,23 +35,56 @@
       <div><i class="fab fa-itunes-note"></i> Finest Sound</div>
       <div><i class="fas fa-star"></i> Finest Workmanship</div>
     </div>
-  </div>
-
-  <div>
+    
+    <div class="video">
       <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/WdAqnc-AjoQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+    </div>
+    
+    <div id="pricing">
+      <div class="pricing-box">
+        Acoustic Guitar
+        <div class="pricing-content">
+          <img class="guitar-img" src="https://www.thomann.de/pics/prod/396723.jpg" alt="Acoustic guitar">
+          <p>$2000</p>
+          <p>A finely made acoustic guitar made out of maple. Sound like heaven and and keeps ringing til eternity.</p>
+        </div>
+        <form action="#">
+          <button>Select</button>
+        </form>
+      </div>
+      <div class="pricing-box">
+        Electric Guitar
+        <div class="pricing-content">
+          <img class="guitar-img" src="https://images.static-thomann.de/pics/prod/433611.jpg" alt="Electric guitar">
+          <p>$2100</p>
+          <p>A finely made electric guitar made out of maple. This guitar is screaming loud and shredding fast.</p>
+        </div>
+        <form action="#">
+          <button>Select</button>
+        </form>
+      </div>
+      <div class="pricing-box">
+        Bass Guitar
+        <div class="pricing-content">
+          <img class="guitar-img" src="https://images.static-thomann.de/pics/prod/405380.jpg" alt="Bass guitar">
+          <p>$2500</p>
+          <p>A finely made bass guitar made out of rosewood. This bass makes the earth rumble and the rythm going.</p>
+        </div>
+        <form action="#">
+          <button>Select</button>
+        </form>
+      </div>
+    </div>
 
-  <div id="pricing">
-    <div class="pricing-box">
-      Acoustic Guitar
+    <div>
+      Privacy Terms Contact
     </div>
-    <div class="pricing-box">
-      Electric Guitar
+    <div>
+      Copyright 2019, Fine Guitars
     </div>
-    <div class="pricing-box">
-      Bass Guitar
-    </div>
+
   </div>
-  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
+  
