--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   </header>
   
   <div class="container">
+
     <div id="top">
-      <div>Finest guitars in the world</div>
+      <div><h1>Finest guitars in the world</h1></div>
       <form id="form" action="https://www.freecodecamp.com/email-submit" method="POST">
         <div>
           <input id="email" type="email" name="email" placeholder="Enter your email address" required>
@@ -31,9 +32,9 @@
     </div>
     
     <div id="features">
-      <div><i class="fas fa-tree"></i> Finest Materials</div>
-      <div><i class="fab fa-itunes-note"></i> Finest Sound</div>
-      <div><i class="fas fa-star"></i> Finest Workmanship</div>
+      <div><h2><i class="fas fa-tree"></i> Finest Materials</h2></div>
+      <div><h2><i class="fab fa-itunes-note"></i> Finest Sound</h2></div>
+      <div><h2><i class="fas fa-star"></i> Finest Workmanship</h2></div>
     </div>
     
     <div class="video">
@@ -45,9 +46,9 @@
         Acoustic Guitar
         <div class="pricing-content">
           <img class="guitar-img" src="https://www.thomann.de/pics/prod/396723.jpg" alt="Acoustic guitar">
-          <p>$2000</p>
-          <p>A finely made acoustic guitar made out of maple. Sound like heaven and and keeps ringing til eternity.</p>
         </div>
+        <p><strong>$2000</strong></p>
+        <p>A finely made acoustic guitar made out of maple. Sound like heaven and and keeps ringing til eternity.</p>
         <form action="#">
           <button>Select</button>
         </form>
@@ -56,9 +57,9 @@
         Electric Guitar
         <div class="pricing-content">
           <img class="guitar-img" src="https://images.static-thomann.de/pics/prod/433611.jpg" alt="Electric guitar">
-          <p>$2100</p>
-          <p>A finely made electric guitar made out of maple. This guitar is screaming loud and shredding fast.</p>
         </div>
+        <p><strong>$2100</strong></p>
+        <p>A finely made electric guitar made out of maple. This guitar is screaming loud and shredding fast.</p>
         <form action="#">
           <button>Select</button>
         </form>
@@ -67,21 +68,23 @@
         Bass Guitar
         <div class="pricing-content">
           <img class="guitar-img" src="https://images.static-thomann.de/pics/prod/405380.jpg" alt="Bass guitar">
-          <p>$2500</p>
-          <p>A finely made bass guitar made out of rosewood. This bass makes the earth rumble and the rythm going.</p>
         </div>
+        <p><strong>$2500</strong></p>
+        <p>A finely made bass guitar made out of rosewood. This bass makes the earth rumble and the rythm going.</p>
         <form action="#">
           <button>Select</button>
         </form>
       </div>
     </div>
 
-    <div>
-      Privacy Terms Contact
-    </div>
-    <div>
-      Copyright 2019, Fine Guitars
-    </div>
+    <footer>
+      <div>
+        <a href="">Privacy</a> <a href="">Terms</a> <a href="">Contact</a>
+      </div>
+      <div>
+        Copyright 2019, Fine Guitars
+      </div>
+    </footer>
 
   </div>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
